--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -8,4 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: npm test
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
